--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <link href="css/styles.css" rel="stylesheet" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    
+  </body>
 </html>
