--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Too fast to live</h1>
+    <h1>Too Young to die</h1>
 
   </body>
 </html> 
