🐪🎍 Checkpoint ./index.html:22580378/182

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   </head>
   <body>
     <h1>Too fast to live</h1>
+    <h2> museum of arts and design</h2>
     <h1>Too Young to die</h1>
+    <h2> museum of arts and design</h2>
+
+
 
   </body>
 </html> 
