🐮🛀 Checkpoint ./styles.css:22580378/147 ./index.html:22580378/143

--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <title>Document</title>
   </head>
   <body>
+  <div class="live">
     <h1>Too fast to live</h1>
     <h2> museum of arts and design</h2>
+  </div>
+  <div class="die">
     <h1>Too Young to die</h1>
     <h2> museum of arts and design</h2>
+  </div>
 
 
 
